# SSPAO2D

./: .gitignore  README.md  pyproject.toml
configs/: model_care2d.json  model_dfcan2d.json  model_picnet2d.json  model_rcan2d.json  model_scare2d.json  model_sfenet2d.json  self_supervised_2d.json  self_supervised_2d_adv1_nocoeffl2.json  supervised_2d.json  supervised_care2d.json  supervised_dfcan2d_fftshift_200ep.json  supervised_dfcan2d_fftshift_continue100.json  supervised_rcan2d.json  supervised_rcan2d_continue_step40_lr25e-6.json  supervised_rcan2d_small.json  supervised_sfenet2d_full.json  supervised_sfenet2d_small.json  two_stage_2d.json
notebooks/: check_patch_strategy.ipynb  inspect_selfsupervised_model.ipynb  inspect_supervised_model.ipynb
scripts/: prepare_dataset.py  run_sfenet_train_screen.sh  test.py  train_self_supervised.py  train_supervised.py  train_two_stage.py
src/ao2d/: __init__.py
src/ao2d/data/: __init__.py  dataset.py  io.py  paths.py
src/ao2d/models/: __init__.py  abenet2d.py  abenet_split2d.py  abenetv2d.py  blocks.py  care2d.py  dfcan2d.py  factory.py  picnet2d.py  rcan2d.py  scare2d.py  sfenet2d.py
src/ao2d/optics/: __init__.py  optics.py
src/ao2d/training/: __init__.py  distributed.py  epoch_metrics.py  forward_model.py  gradients.py  losses.py  metrics.py  optimizer.py  scheduler.py
tests/: test_abenet2d.py  test_dataset_normalization.py  test_physics_smoke.py  test_sfenet2d.py
