[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ao2d"
version = "0.1.0"
description = "Two-dimensional self-supervised/supervised adaptive optics microscopy models."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "tqdm",
    "pillow",
]

[tool.setuptools.packages.find]
where = ["src"]
